api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-service
spec:
        ports:
              - protocol: TCP
                port: 3000
                targetPort: 3000
