api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api-ingress
spec:
    
    rules:
          - host: "api.20.74.30.33.nip.io"
            http:
              paths:
                 - pathType: Prefix
                   path: "/"
                   backend:
                      service:
                         name: api-service
                         port:
                           number: 3000
